--- a/01-variable.yml
+++ b/01-variable.yml
@@ -34,3 +34,27 @@
         msg: "{{ URL2 }}"
       vars:
         URL2: sample.com
+
+# Apart from the above 2 approaches we can also declare the variable on the command line. which is something called as
+  # variable precedence
+  # Here precedence means priority, now if you declare a variable on the play level or task level. The task level
+    # variable has high priority compare to play level variable.
+- name: Demo on variables
+  hosts: localhost
+  vars:
+    URL1: example.com
+    URL2: example.com
+  tasks:
+    - name: Print URL1 Variable
+      ansible.builtin.debug:
+        msg: "{{ URL1 }}"
+      vars:
+        URL1: sample.com
+    - name: Print URL2 Variable
+      ansible.builtin.debug:
+        msg: "{{ URL2 }}"
+      vars:
+        URL2: sample.com
+# Here we have declare a variable in play level with url: example.com and also declare a variable in task level with
+  # url: sample.com. Now if i execute this i will get sample.com as output because The task level variable has high
+  # priority compare to play level variable.
