--- a/01-variable.yml
+++ b/01-variable.yml
@@ -42,19 +42,19 @@
 - name: Demo on variables
   hosts: localhost
   vars:
-    URL1: example.com
-    URL2: example.com
+    URL3: example.com
+    URL4: example.com
   tasks:
-    - name: Print URL1 Variable
+    - name: Print URL3 Variable
       ansible.builtin.debug:
-        msg: "{{ URL1 }}"
+        msg: "{{ URL3 }}"
       vars:
-        URL1: sample.com
-    - name: Print URL2 Variable
+        URL3: samples.com
+    - name: Print URL4 Variable
       ansible.builtin.debug:
-        msg: "{{ URL2 }}"
+        msg: "{{ URL4 }}"
       vars:
-        URL2: sample.com
+        URL4: samples.com
 # Here we have declare a variable in play level with url: example.com and also declare a variable in task level with
-  # url: sample.com. Now if i execute this i will get sample.com as output because The task level variable has high
+  # url: samples.com. Now if i execute this i will get samples.com as output because The task level variable has high
   # priority compare to play level variable.
