--- a/05-aws-ssm.yml
+++ b/05-aws-ssm.yml
@@ -2,6 +2,6 @@
   hosts: localhost
   tasks:
     - name: lookup ssm parameter store in the current region
-      debug: msg="{{ lookup('amazon.aws.aws_ssm', 'sample' ) }}"
+      debug: msg="{{ lookup('amazon.aws.aws_ssm', 'sample', region='us-east-2' ) }}"
 
 # Here sample is the name of the parameter
