Filter & Split function Topic of Ansible

--- a/08-filters.yml
+++ b/08-filters.yml
@@ -9,4 +9,13 @@
 
     - name: Print No Of Users
       ansible.builtin.debug:
-        msg: "{{ OUT }}"
+        msg: "{{ OUT.stdout | split(',') }}"
+
+
+# msg: "{{ OUT }}"  --> in output it give all the details
+
+# Now i want only stdout in the output and them need to split in a list so i cn give these s a message
+    #   msg: "{{ OUT.stdout | split(',') }}"
+
+# After executing we got the output and in the "stdout": " 17:50:50 up 21 min,  1 user,  load average: 0.08, 0.02, 0.01",
+# all these details are in line now i want to split and make them in line
