Filter & Split function Topic of Ansible

--- a/08-filters.yml
+++ b/08-filters.yml
@@ -9,13 +9,16 @@
 
     - name: Print No Of Users
       ansible.builtin.debug:
-        msg: "{{ OUT.stdout | split(',') }}"
+        msg: "{{ OUT.stdout | split(',')[1] }}"
 
 
 # msg: "{{ OUT }}"  --> in output it give all the details
 
-# Now i want only stdout in the output and them need to split in a list so i cn give these s a message
+# Now i want only stdout in the output and i need to split them in a list so i cn give these s a message
     #   msg: "{{ OUT.stdout | split(',') }}"
+
+# Now if i want to only the 1st value of the list then i can give the bellow one, in list the index start with 0.
+    #   msg: "{{ OUT.stdout | split(','))[1] }}"
 
 # After executing we got the output and in the "stdout": " 17:50:50 up 21 min,  1 user,  load average: 0.08, 0.02, 0.01",
 # all these details are in line now i want to split and make them in line
