Filter & Split function Topic of Ansible

--- a/08-filters.yml
+++ b/08-filters.yml
@@ -9,16 +9,27 @@
 
     - name: Print No Of Users
       ansible.builtin.debug:
-        msg: "{{ (OUT.stdout | split(','))[1] }}"
+        msg: "{{ ((OUT.stdout | split(','))[1] | split(','))[1] }}"
 
 
 # msg: "{{ OUT }}"  --> in output it give all the details
 
 # Now i want only stdout in the output and i need to split them in a list so i cn give these s a message
-    #   msg: "{{ OUT.stdout | split(',') }}"
+    #   msg: "{{ OUT.stdout | split(',') }}"   after executing with these statement we get the below output
+      # "msg": [
+      #   " 17:57:40 up 28 min",        --- index value 0
+      #   "  1 user",                   --- index value 1
+      #   "  load average: 0.00",
+      #   " 0.00",
+      #   " 0.00"
 
 # Now if i want to only the 1st value of the list then i can give the bellow one, in list the index start with 0.
-    #   msg: "{{ (OUT.stdout | split(','))[1] }}"
+    #   msg: "{{ (OUT.stdout | split(','))[1] }}"    after executing with these statement we get the below output
+      #  "msg": "  1 user"
+
+# Now if i want to get the output without user string then i can get it with below one,
+    #   msg: "{{ ((OUT.stdout | split(','))[1] | split(','))[1] }}" after executing with these statement we get the below output
+      #
 
 # After executing we got the output and in the "stdout": " 17:50:50 up 21 min,  1 user,  load average: 0.08, 0.02, 0.01",
 # all these details are in line now i want to split and make them in line
